Fix some broken css

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,12 +25,6 @@ body {
     font-family: Poppins, sans-serif;
 }
 
-.selector-item:first-of-type {
-    outline: 4px solid rgb(var(--accent));
-    border-bottom: 0;
-    margin-top: -4px;
-}
-
 .section:last-of-type {
     margin-bottom: var(--global-margin);
 }
